envoy-proxy/manual/lds.yaml
version_info: "0"
resources:
- "@type": "type.googleapis.com/envoy.config.listener.v3.Listener"
  name: listener_0
  address:
    socket_address: 
      address: 0.0.0.0
      port_value: 8080
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
        codec_type: auto
        stat_prefix: ingress_http
        upgrade_configs:
          - upgrade_type: websocket
        route_config:
          name: local_route
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
            - match: 
                prefix: "/api.demo.*"
              grpc: {}
              route:
                cluster: greeter_service
                max_grpc_timeout: 0s
            - match: 
                prefix: "/"
              route:
                cluster: react_client
            cors:
              allow_origin_string_match:
              - prefix: "*"
              allow_methods: GET, PUT, DELETE, POST, OPTIONS
              allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
              max_age: "1728000"
              expose_headers: custom-header-1,grpc-status,grpc-message
        http_filters:
        - name: envoy.filters.http.grpc_web
        - name: envoy.filters.http.cors
        - name: envoy.filters.http.router
